Allow tests to access all files on Chrome OS

Chrome OS browser tests uses |ChromeNetworkDelegate::IsAccessAllowed|
but |g_access_to_all_files_enabled| was not hooked in.

This patch moved |g_access_to_all_files_enabled| to
|IsAccessAllowedInternal| to make sure it's always checked.

Bug: 884773
Change-Id: I5183f3250e13af151a987561bdf5f93a6f0200be
Reviewed-on: https://chromium-review.googlesource.com/1235122
Commit-Queue: Chong Zhang <chongz@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592617}
Former-commit-id: a7f5b321fab7a30566d5e799836f89a40916b3ec